# video-bell-esp32-webrtc

./: .gitignore  .ignore  HARDWARE_CONFIG_COMPARISON.md  README.md  sdkconfig  sdkconfig.old  test_mic.c
.todos/: list.json
common/: media_sys.h
components/BSP/ES8311/: CMakeLists.txt  es8311.c  es8311.h
components/BSP/KEY/: key.c
components/BSP/LCD/: lcd.c
components/BSP/MYI2S/: myi2s.c  myi2s.h
components/BSP/MYIIC/: myiic.c
components/BSP/XL9555/: xl9555.c
components/codec_board/: board_cfg.txt  cfg_parse.c  lcd_init.c
components/codec_board/include/: codec_board.h
components/esp_peer/: CHANGELOG.md  idf_component.yml
components/esp_webrtc/src/: esp_webrtc.c
example-camera/29_usb_camera/main/: main.c
example/23_music/: CMakeLists.txt  README.md
example/23_music/components/BSP/: CMakeLists.txt
example/23_music/components/BSP/MYI2S/: myi2s.h
example/23_music/components/BSP/MYIIC/: myiic.c
example/23_music/components/BSP/MYSPI/: my_spi.h
example/23_music/components/BSP/SPI_SD/: spi_sd.h
example/23_music/main/: main.c
example/24_recoding/: CMakeLists.txt  README.md  sdkconfig
example/24_recoding/main/: main.c
example/29_usb_camera/: CMakeLists.txt  sdkconfig
example/29_usb_camera/components/BSP/: CMakeLists.txt
example/29_usb_camera/components/BSP/LCD/: lcd.h
example/29_usb_camera/components/BSP/MYIIC/: myiic.h
main/: CMakeLists.txt  audio_device.c  audio_device.h  board.c  idf_component.yml  lcd_test.c  lcd_test.h  main.c  media_sys.c  mic_diagnostic.c  mic_diagnostic.h  mic_loopback_test.c  mic_loopback_test.h  motion_tracker.c  motion_tracker.h  servo_control.c  servo_control.h  settings.h  webrtc.c
(+26 files in other folders)
